<resources>
    <string name="app_name">SakeWiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="nav_drawer_items">
        <item>@string/menu_item_search_places</item>
        <item>@string/menu_item_my_profile</item>
        <item>@string/menu_item_followers</item>
        <item>@string/menu_item_private_notes</item>
        <item>@string/menu_item_saved_sakes</item>
        <item>@string/menu_item_newsfeed</item>
        <item>@string/menu_item_my_purchases</item>
        <item>@string/menu_item_inventory_add</item>
        <item>@string/menu_item_settings</item>
        <item>@string/menu_item_logout</item>
    </string-array>
    <string-array name="rate_reminder_items">
        <item>@string/every_48_hr</item>
        <item>@string/every_24_hr</item>
        <item>@string/never</item>
    </string-array>
    <string name="menu_item_search_places">Search Places</string>
    <string name="menu_item_my_profile">My Profile</string>
    <string name="menu_item_followers">Followers</string>
    <string name="menu_item_private_notes">Private Notes</string>
    <string name="menu_item_saved_sakes">Saved Sakes</string>
    <string name="menu_item_newsfeed">Newsfeed</string>
    <string name="menu_item_my_purchases">My Purchases</string>
    <string name="menu_item_inventory_add">Inventory Add</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_my_qr_code">My QR Code</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_unknown_sake">Unknown Sake</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="scan_label">Scan Label</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout">Logout</string>
    <string name="sign_in_activity_title">SIGN IN WITH EMAIL</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_log_in">Login</string>
    <string name="not_a_member">Not a member?</string>
    <string name="btn_join_now">Join Now</string>
    <string name="btn_guest_login">Guest Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="resend_activation_email">Resend activation email</string>
    <string name="cancel_fb_login">Cancel the facebook login</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="register_with_email">Register with Email</string>
    <string name="sign_in">Sign In</string>
    <string name="register_activity_title">REGISTER WITH EMAIL</string>
    <string name="get_started">Get Started</string>
    <string name="handle">Handle</string>
    <string name="register_validation_empty_handle">Please enter handle</string>
    <string name="register_validation_empty_email">Please enter your email</string>
    <string name="forgot_password_activity_title">FORGOT PASSWORD</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_signup_with_email">Sign Up With Email</string>
    <string name="title_activity_register">Register With Email</string>
    <string name="title_activity_reset_password">Forgot Password</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_my_account">My Account</string>
    <string name="title_fragment_cart">Cart</string>
    <string name="title_fragment_support">Support</string>
    <string name="title_fragment_qr_reader">QR Reader</string>
    <string name="welcome_title">Welcome my Breadcrumbs!</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="warning">Warning!</string>
    <string name="ok">Ok</string>
    <string name="ok_i_understood">Ok. I understood</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="please_wait">Please wait…</string>
    <string name="close">Close</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="tel">tel:</string>
    <string name="mailto">mailto:</string>
    <string name="success">Success</string>
    <string name="image_description">Image content description</string>
    <string name="search_view_hint">Search</string>
    <string name="edit">Edit</string>
    <string name="ago">ago</string>
    <string name="bottom_bar_home">Home</string>
    <string name="bottom_bar_my_account">My Account</string>
    <string name="bottom_bar_cart">Cart</string>
    <string name="bottom_bar_support">Support</string>
    <string name="bottom_bar_qr_reader">QR Reader</string>
    <string name="action_home">Home</string>
    <string name="action_new_crumb">New crumb</string>
    <string name="action_help">Help</string>
    <string name="section_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="help_content">This library was created for the love of breadcrumbs. Bring some milk and show some support!\n\nMail me: rok5ek@hotmail.com</string>
    <string name="undo">Undo</string>
    <string name="hint_forgot_password_email">Email Address</string>
    <string name="txt_topic_forgot_password">Forgot Password</string>
    <string name="about_text">About</string>
    <string name="terms_text">Terms &amp; Condition</string>
    <string name="privacy_text">Privacy</string>
    <string name="login_validation_username">Please enter your email</string>
    <string name="login_validation_password">Please enter your password</string>
    <string name="login_validation_email">Please enter a valid email address</string>
    <string name="rp_validation_email">Please enter your email</string>
    <string name="facebook_app_id">775627052593549</string>
    <string name="facebook_app_name">SakeWiz</string>
    <string name="fragment_main_dash_board">DASHBOARD</string>
    <string name="sake_lovers">SAKE LOVERS</string>
    <string name="wiz_redit_untill_next_level">Wiz Credits until next level</string>
    <string name="fav_sake">Fav Sake</string>
    <string name="fav_places">Fav Places</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="labels">Labels</string>
    <string name="wiz_credits">Wiz-Credits</string>
    <string name="fragment_product_details">Product Details</string>
    <string name="latest_recommendations">Latest Recommendations</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">NJjunotXJv1itMYzlQDz8udGW</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">DO3EoB4OZrOhk0EYN7gTfGtFE5tUet3XeBxF8g22X7j0yXAWBf</string>
    <string name="special_user">Special User</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_gender">Gender:</string>
    <string name="lbl_age">Age:</string>
    <string name="lbl_preferred_language">Preferred language:</string>
    <string name="review_settings">Review Settings</string>
    <string name="label_settings">Label Settings</string>
    <string name="only_show_comments_in_my_language">Only show comments in my language</string>
    <string name="notify_me_someone_likes_my_comment">Notify me when someone likes my comment</string>
    <string name="save_labels_to_local_storage">Save my labels to local storage</string>
    <string name="notify_me_someone_likes_my_content">Notify me someone likes my content</string>
    <string name="notify_me_on_new_events">Notify me on new events or news</string>
    <string name="notify_me_on_exclusive_sakewiz_deals">Notify me on exclusive SakeWiz deals</string>
    <string name="rate_reminder">Rate Reminder</string>
    <string name="every_48_hr">Every 48Hr</string>
    <string name="every_24_hr">Every 24Hr</string>
    <string name="never">Never</string>
    <string name="sign_out">Sign Out</string>
    <string name="fragment_search">SEARCH</string>
    <string name="fragment_search_sake">Sake</string>
    <string name="fragment_search_breweries">Breweries</string>
    <string name="fragment_search_places">Places</string>
    <string name="sake_search_hint">Search…</string>
    <string name="place_search_hint">Search…</string>
    <string name="sake_result">SEARCH RESULTS</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="fragment_radius">Radius</string>
    <string name="fragment_location">Location</string>
    <string name="fragment_sake_type">Sake Type</string>
    <string name="three_km">3 Km</string>
    <string name="five_km">5 Km</string>
    <string name="ten_km">10 Km</string>
    <string name="fifteen_km">15 Km</string>
    <string name="radius_apply_button">Apply</string>
    <string name="title_sort_by">SORT BY</string>
    <string name="title_spinner_country">Country</string>
    <string name="title_spinner_city">Region</string>
    <string name="text_done_button">Done</string>
    <string name="title_spinner_province">Sub Region</string>
    <string name="sort_tag_highest_rated">Highest Rated</string>
    <string name="sort_tag_lowest_rated">Lowest Rated</string>
    <string name="sort_tag_most_commented">Most Commented</string>
    <string name="sort_tag_least_commented">Least Commented</string>
    <string name="sort_text_rating">Rating</string>
    <string name="sort_text_favored">Favored by</string>
    <string name="sort_text_review">Review count</string>
    <string name="sort_tag_rating">RATING</string>
    <string name="sort_tag_favoured">FAVOURED</string>
    <string name="sort_tag_review">REVIEW_COUNT</string>
    <string name="default_sort_by">DES</string>
    <string name="favourite">Favourite</string>
    <string name="taste_chart">Taste Chart</string>
    <string name="add_note">Add Note</string>
    <string name="reviews">Reviews</string>
    <string name="label_how_did_u_find_it">HOW DID YOU FIND IT?</string>
    <string name="btn_label_submit_review">Submit review</string>
    <string name="label_hint_comments">Comments</string>
    <string name="rating">rating</string>
    <string name="details">Details</string>
    <string name="my_sake_notes">My Sake Notes</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="fragment_favourite_sake">Favourite Sake</string>
    <string name="fragment_favorite_places">Favourite Places</string>
    <string name="fragment_favorite_places_bars">Favourite Places Bars</string>
    <string name="fragment_favorute_places_breweries">Favourite Places Breweries</string>
    <string name="fav_places_bars_title">Bars</string>
    <string name="fav_places_breweries_title">Breweries</string>
    <string name="bar_details">Bar Details</string>
    <string name="brewery_details">Brewery Details</string>
    <string name="service_availability">Service Availability</string>
    <string name="like_comment_string">liked your comment on</string>
    <string name="started_following_you_string">has started following you</string>
    <string name="liked_your_wiz_moment">liked your wiz moment</string>
    <string name="friends">Friends</string>
</resources>