<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/header_header_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dark_text_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:padding="5dp"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/done_btn_bg"
            android:text="@string/text_done_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/header_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/highest_rated_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <cn.refactor.library.SmoothCheckBox
                android:id="@+id/highest_rated_check"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:tag="@string/sort_tag_rating"
                app:color_checked="@color/btn_green_background_color" />

            <TextView
                android:id="@+id/highest_rated_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_text_rating"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/dark_text_color"
                android:textSize="@dimen/menu_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/favoured_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <cn.refactor.library.SmoothCheckBox
                android:id="@+id/favoured_check"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:tag="@string/sort_tag_favoured"
                app:color_checked="@color/btn_green_background_color" />

            <TextView
                android:id="@+id/favoured_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_text_favored"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/dark_text_color"
                android:textSize="@dimen/menu_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/review_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <cn.refactor.library.SmoothCheckBox
                android:id="@+id/review_check"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:tag="@string/sort_tag_review"
                app:color_checked="@color/btn_green_background_color" />

            <TextView
                android:id="@+id/review_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_text_review"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/dark_text_color"
                android:textSize="@dimen/menu_text_size"/>

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:id="@+id/least_commented_container"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<cn.refactor.library.SmoothCheckBox-->
                <!--android:id="@+id/least_commented_check"-->
                <!--android:layout_width="25dp"-->
                <!--android:layout_height="25dp"-->
                <!--android:layout_margin="5dp"-->
                <!--android:tag="@string/sort_tag_least_commented"-->
                <!--app:color_checked="@color/btn_green_background_color" />-->

            <!--<TextView-->
                <!--android:id="@+id/least_commented_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/sort_tag_least_commented"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:textColor="@color/dark_text_color"-->
                <!--android:textSize="@dimen/menu_text_size"/>-->

        <!--</LinearLayout>-->



    </LinearLayout>

</RelativeLayout>