<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="250dp">

        <TextView
            android:id="@+id/text_topic"
            style="@style/default_text_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/signup_button_height"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_topic_forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size" />

        <EditText
            android:id="@+id/et_email"
            style="@style/default_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="left|center_vertical"
            android:layout_below="@+id/text_topic"
            android:hint="@string/hint_forgot_password_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/sign_up_email_text_color"
            android:textColorHint="@color/sign_up_text_color"
            android:textSize="@dimen/default_text_size" />

        <Button
            android:id="@+id/btn_reset_pw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signup_button_height"
            android:layout_below="@+id/et_email"
            android:layout_marginTop="@dimen/forgot_password_button_margin_top"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

    </RelativeLayout>

</RelativeLayout>