<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:id="@+id/user_img_container"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@+id/toolbar"
            android:background="@drawable/ic_background_pattern">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/test_profile_pic" />

                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_profile"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="Ashika Umaglia"
                    android:textColor="@color/user_text_color"
                    android:textSize="@dimen/large_text_size" />

                <RelativeLayout
                    android:id="@+id/special_user_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_user_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/img_crown"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_crown" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/img_crown"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/img_crown"
                        android:text="@string/special_user"
                        android:textAllCaps="true"
                        android:textColor="@color/settings_user_info_text_color"
                        android:textSize="@dimen/default_text_size" />

                </RelativeLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/profile_line_separator_color" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/basic_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_img_container">

            <RelativeLayout
                android:id="@+id/email_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp">

                <TextView
                    android:id="@+id/lbl_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/lbl_email"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/lbl_email"
                    android:text="Ashika@hotmail.com"
                    android:textColor="@color/settings_user_info_text_color"
                    android:textSize="@dimen/large_text_size" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gender_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/lbl_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_gender"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:id="@+id/txt_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/lbl_gender"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/lbl_gender"
                    android:text="Male"
                    android:textColor="@color/settings_user_info_text_color"
                    android:textSize="@dimen/large_text_size" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/age_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/lbl_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_age"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:id="@+id/txt_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/lbl_age"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/lbl_age"
                    android:text="25-35"
                    android:textColor="@color/settings_user_info_text_color"
                    android:textSize="@dimen/large_text_size" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/language_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/lbl_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_preferred_language"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:id="@+id/txt_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/lbl_language"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/lbl_language"
                    android:text="English"
                    android:textColor="@color/settings_user_info_text_color"
                    android:textSize="@dimen/large_text_size" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/txt_language"
                    android:background="@drawable/ic_flag_uk" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/language_container"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_btn_green"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/edit"
                android:textColor="@color/white" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/settings_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/basic_info_container"
            android:dividerHeight="5dp" />

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/settings_recycler_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_green"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/sign_out"
            android:textColor="@color/white" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>